--- a/File 1.vcxproj.filters
+++ b/File 1.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Traingle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="square.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
